--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,7 @@
 
-<p>
-    <mat-toolbar color="primary">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-            <mat-icon>menu</mat-icon>
-        </button>
-        <span routerLink="/main/login">Login</span>
-        <span routerLink="/main/home">Home</span>
-        <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-            <mat-icon>favorite</mat-icon>
-        </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon>share</mat-icon>
-        </button>
-    </mat-toolbar>
+<p style="text-align: center; margin-top: 40px;">
+        <button style="margin-right: 10px;" class="btn-nav" (click)="register()">Create Employee</button> 
+    
 </p>
 
 <router-outlet></router-outlet>
